--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 hyper = "0.13.1"
 http = "0.2.0"
-hyper-usse = "0.2.0"
+hyper-usse = { git = "https://github.com/kwf/hyper-usse" }
 futures = "0.3.1"
 tokio = { version = "0.2.4", features = ["full"] }
+lazy_static = "1.4.0"
