--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ hyper-usse = { git = "https://github.com/kwf/hyper-usse" }
 futures = "0.3.1"
 tokio = { version = "0.2.4", features = ["full"] }
 lazy_static = "1.4.0"
+percent-encoding = "2.1.0"
