--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ futures = "0.3.1"
 tokio = { version = "0.2.4", features = ["full"] }
 lazy_static = "1.4.0"
 percent-encoding = "2.1.0"
+itertools = "0.8.2"
