Consolidate all functionality into one port
This commit:
* Runs all aspects of the server on a single port
* Makes the user specify explicitly when they wish the data to be static (using
the ?static query parameter) rather than inferring it based on Content-Type
* Adds a --port command line option, and changes the default port to 1123
* Properly URL-decodes the query parameters, to allow, e.g. spaces in titles
* Updates the README to reflect most of these changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ tokio = { version = "0.2.4", features = ["full"] }
 lazy_static = "1.4.0"
 percent-encoding = "2.1.0"
 itertools = "0.8.2"
+structopt = "0.3"
 
 [profile.release]
-panic = 'abort'
 lto = true
-codegen-units = 1
