Implement event subscription and notification (no in-page JS support yet)
Fully integrates event subscription and SSE handling into the page life cycle
and heartbeat management, as well as finishing out the new server paths to
handle event subscription and notification.

Yet to do: integrate with the page to actually create event listeners on page
elements, and send requests to the server when those listeners are triggered.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lazy_static = "1.4.0"
 percent-encoding = "2.1.0"
 itertools = "0.8.2"
 structopt = "0.3"
-serde = { verison = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [profile.release]
