--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ structopt = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bytes = "0.5.3"
+
+[dev-dependencies]
+reqwest = { version = "0.10", features = ["json", "stream"] }
