--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 homepage = "https://github.com/GaloisInc/myxine"
 readme = "README.md"
 license = "MIT"
+
+[badges]
 maintenance = { status = "actively-developed" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
