--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bytes = "0.5.3"
 uuid = { version = "0.8.1", features = ["v4"] }
+void = "1"
 
 [dev-dependencies]
 reqwest = { version = "0.10", features = ["json", "stream"] }
