--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -26,6 +26,8 @@ library
                        aeson,
                        text,
                        transformers,
+                       bytestring,
+                       unordered-containers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
