--- a/clients/haskell/stack.yaml
+++ b/clients/haskell/stack.yaml
@@ -37,7 +37,10 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+  - dependent-map-0.3
+  - constraints-extras-0.3
+  - dependent-sum-0.6
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -62,3 +65,5 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
+allow-newer: true
