--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -37,7 +37,8 @@ common deps
                        unordered-containers,
                        dependent-map,
                        dependent-sum,
-                       template-haskell
+                       template-haskell,
+                       hashable
 
 library
   import:              deps, options
