Implement chunked event stream parser

--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -41,6 +41,7 @@ library
   import:              deps, options
   exposed-modules:     Myxine
   other-modules:       Myxine.Event
+                       Myxine.EventStream
                        Myxine.TH
                        Paths_myxine_client
   default-extensions:
