Start at implementing event loop with network connectivity

--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -35,7 +35,8 @@ common deps
                        dependent-sum,
                        template-haskell,
                        hashable,
-                       file-embed
+                       file-embed,
+                       http-client
 
 library
   import:              deps, options
