--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -50,20 +50,20 @@ common options
                        -Wpartial-fields
 
 common deps
-  build-depends:       base ^>=4.13.0.0,
-                       req,
-                       aeson,
-                       text,
-                       transformers,
-                       bytestring,
-                       unordered-containers,
-                       dependent-map,
-                       dependent-sum,
-                       template-haskell,
-                       hashable,
-                       file-embed,
-                       http-client,
-                       http-types
+  build-depends:       base                 ^>=4.13.0.0,
+                       req                  ^>= 3.1,
+                       aeson                ^>= 1.4,
+                       text                 ^>= 1.2,
+                       transformers         ^>= 0.5,
+                       bytestring           ^>= 0.10,
+                       unordered-containers ^>= 0.2,
+                       dependent-map        ^>= 0.3,
+                       dependent-sum        ^>= 0.6,
+                       template-haskell     ^>= 2.15,
+                       hashable             ^>= 1.3,
+                       file-embed           ^>= 0.0.11.1,
+                       http-client          ^>= 0.6,
+                       http-types           ^>= 0.12
 
 library
   import:              deps, options
@@ -76,20 +76,8 @@ library
                        Myxine.Internal.EventStream
                        Myxine.Internal.TH
                        Paths_myxine_client
-  default-extensions:
+  autogen-modules:     Paths_myxine_client
   hs-source-dirs:      src
-
-executable circles
-  import:              options
-  build-depends:       base ^>=4.13.0.0,
-                       myxine-client,
-                       text,
-                       bytestring,
-                       blaze-html,
-                       blaze-markup,
-                       random
-  main-is:             Main.hs
-  hs-source-dirs:      examples/circles
 
 test-suite myxine-client-test
   import:              options
