--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -1,6 +1,6 @@
 cabal-version:       2.4
 name:                myxine-client
-version:             0.0.0.1
+version:             0.0.0.2
 synopsis:            A Haskell client for the Myxine GUI server
 homepage:            https://github.com/GaloisInc/myxine
 bug-reports:         https://github.com/GaloisInc/myxine/issues
@@ -38,6 +38,22 @@ description:
   "alpha" stability at present. No compatibility between alpha versions is
   guaranteed.
 
+common deps
+  build-depends:       base                 >= 4.12.0.0 && <= 4.14.0.0,
+                       req                  ^>= 3.1,
+                       aeson                ^>= 1.4,
+                       text                 ^>= 1.2,
+                       transformers         ^>= 0.5,
+                       bytestring           ^>= 0.10,
+                       unordered-containers ^>= 0.2,
+                       dependent-map        ^>= 0.3,
+                       dependent-sum        ^>= 0.6,
+                       template-haskell     >= 2.14.0.0 && <= 2.15.0.0,
+                       hashable             ^>= 1.3,
+                       file-embed           ^>= 0.0.11.1,
+                       http-client          ^>= 0.6,
+                       http-types           ^>= 0.12
+
 common options
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -48,22 +64,27 @@ common options
                        -Wredundant-constraints
                        -fhide-source-paths
                        -Wpartial-fields
-
-common deps
-  build-depends:       base                 ^>=4.13.0.0,
-                       req                  ^>= 3.1,
-                       aeson                ^>= 1.4,
-                       text                 ^>= 1.2,
-                       transformers         ^>= 0.5,
-                       bytestring           ^>= 0.10,
-                       unordered-containers ^>= 0.2,
-                       dependent-map        ^>= 0.3,
-                       dependent-sum        ^>= 0.6,
-                       template-haskell     ^>= 2.15,
-                       hashable             ^>= 1.3,
-                       file-embed           ^>= 0.0.11.1,
-                       http-client          ^>= 0.6,
-                       http-types           ^>= 0.12
+  default-extensions:  BlockArguments,
+                       DataKinds,
+                       DeriveAnyClass,
+                       DeriveGeneric,
+                       DerivingStrategies,
+                       DerivingVia,
+                       DuplicateRecordFields,
+                       EmptyCase,
+                       GADTs,
+                       GeneralizedNewtypeDeriving,
+                       KindSignatures,
+                       LambdaCase,
+                       NamedFieldPuns,
+                       OverloadedStrings,
+                       RankNTypes,
+                       ScopedTypeVariables,
+                       StandaloneDeriving,
+                       TemplateHaskell,
+                       TupleSections,
+                       TypeApplications,
+                       ViewPatterns
 
 library
   import:              deps, options
@@ -84,7 +105,6 @@ test-suite myxine-client-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
-  build-depends:       base ^>=4.13.0.0,
-                       myxine-client,
+  build-depends:       myxine-client,
                        text,
                        bytestring
