--- a/myxine/Cargo.toml
+++ b/myxine/Cargo.toml
@@ -20,13 +20,14 @@ hyper = "0.13"
 http = "0.2"
 hyper-usse = "0.3"
 futures = "0.3"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2.2", features = ["full"] }
 lazy_static = "1.4"
 percent-encoding = "2.1"
-itertools = "0.8"
+itertools = "0.9"
 structopt = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.6"
 bytes = "0.5"
 uuid = { version = "0.8", features = ["v4"] }
 void = "1"
