--- a/myxine/Cargo.toml
+++ b/myxine/Cargo.toml
@@ -16,9 +16,10 @@ maintenance = { status = "actively-developed" }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hopscotch = "0.1.0"
 hyper = "0.13"
 http = "0.2"
-hyper-usse = "0.3"
+hyper-usse = "0.3" # TODO: remove this dependency
 futures = "0.3"
 tokio = { version = "0.2.2", features = ["full"] }
 lazy_static = "1.4"
