Adapt direct-style Haskell client to long-polling API
This simplifies the use of the direct-style client. Previously, in order
to ensure the streaming connection stayed open, we would need to pass a
continuation to execute for each event. Now, because each event
corresponds to a separate request, we can have what was initially
desired:

```
events :: PageLocation -> EventList -> IO (IO PageEvent)
```

--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -54,6 +54,7 @@ common deps
                        file-embed           ^>= 0.0.11.1,
                        http-client          ^>= 0.6,
                        http-types           ^>= 0.12,
+                       modern-uri           ^>= 0.3,
                        constraints          >= 0.10 && <= 0.12
 
 common options
@@ -98,7 +99,6 @@ library
                        Myxine.Handlers
                        Myxine.Event
                        Myxine.ConjMap
-                       Myxine.Internal.EventStream
                        Myxine.Internal.TH
                        Paths_myxine_client
   autogen-modules:     Paths_myxine_client
