--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,3 +31,6 @@ uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
 reqwest = { version = "0.10", features = ["json", "stream"] }
+
+[[bin]]
+name = "myxine"
