--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,6 +15,7 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 hopscotch = "0.1.1"
+warp = "0.2"
 hyper = "0.13"
 http = "0.2"
 hyper-usse = "0.3" # TODO: remove this dependency
@@ -28,6 +29,7 @@ serde_json = "1.0"
 serde_urlencoded = "0.6"
 bytes = "0.5"
 uuid = { version = "0.8", features = ["v4"] }
+either = "1.5"
 
 [dev-dependencies]
 reqwest = { version = "0.10", features = ["json", "stream"] }
