--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,6 +30,7 @@ serde_urlencoded = "0.6"
 bytes = "0.5"
 uuid = { version = "0.8", features = ["v4"] }
 either = "1.5"
+lazy_static = "1.4"
 
 [dev-dependencies]
 reqwest = { version = "0.10", features = ["json", "stream"] }
