--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -28,7 +28,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_urlencoded = "0.6"
 bytes = "0.5"
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { version = "0.8", features = ["v4", "serde"] }
 either = "1.5"
 lazy_static = "1.4"
 
