--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "myxine"
+name = "myxine-core"
 version = "0.1.0"
-description = "Get a GUI fast in any language under the sea"
+description = "The core library powering the Myxine GUI server. See the myxine crate for more."
 keywords = ["GUI", "web", "interface", "scripting", "tool"]
 categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
 authors = ["Kenny Foner <kwf@very.science>"]
@@ -14,22 +14,13 @@ license = "MIT"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-myxine-core = { path = "../core" }
 hopscotch = "0.1.1"
-warp = { version = "0.2" }
-hyper = "0.13"
-http = "0.2"
 futures = "0.3"
 tokio = { version = "0.2.2", features = ["full"] }
-percent-encoding = "2.1"
-structopt = "0.3"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_urlencoded = "0.6"
 bytes = "0.5"
-lazy_static = "1.4"
+uuid = { version = "0.8", features = ["v4", "serde"] }
 
 [dev-dependencies]
 reqwest = { version = "0.10", features = ["json", "stream"] }
-
-[[bin]]
-name = "myxine"
