--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ license = "MIT"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-myxine-core = { path = "../core" }
+myxine-core = { path = "../core", version = "0.1.0" }
 hopscotch = "0.1.1"
 warp = { version = "0.2" }
 hyper = "0.13"
