--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "myxine"
 version = "0.2.0"
-description = "Get a GUI fast in any language under the sea"
+description = "Get a GUI fast in any language under the sea!"
 keywords = ["GUI", "web", "interface", "scripting", "tool"]
 categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
 authors = ["Kenny Foner <kwf@very.science>"]
