--- a/examples/haskell/myxine-client-examples.cabal
+++ b/examples/haskell/myxine-client-examples.cabal
@@ -57,6 +57,8 @@ common deps
                        text,
                        blaze-markup,
                        blaze-html,
+                       lens,
+                       mtl,
                        myxine-client
 
 executable circles
