--- a/examples/haskell/myxine-client-examples.cabal
+++ b/examples/haskell/myxine-client-examples.cabal
@@ -59,6 +59,8 @@ common deps
                        blaze-html,
                        lens,
                        mtl,
+                       uuid,
+                       containers,
                        myxine-client
 
 executable circles
