--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -60,8 +60,8 @@ common deps
                        salve                ^>= 1.0,
                        blaze-markup         ^>= 0.8,
                        blaze-html           ^>= 0.9,
-                       spoon                ^>= 0.3
-
+                       spoon                ^>= 0.3,
+                       async                ^>= 2.2
 
 common options
   default-language:    Haskell2010
@@ -83,6 +83,7 @@ common options
                        RecordWildCards,
                        EmptyCase,
                        FlexibleInstances,
+                       FlexibleContexts,
                        GADTs,
                        GeneralizedNewtypeDeriving,
                        KindSignatures,
