Add ## combinator and upgrade deps
The ## combinator is the conceptual dual of @@: while @@ "zooms in" on a
particular section of the page's /presentation/, ## "zooms in" on a
particular section of the page's /representation/.

Add Toggles example to demonstrate use of ##.

Fix some documentation.

--- a/examples/haskell/myxine-client-examples.cabal
+++ b/examples/haskell/myxine-client-examples.cabal
@@ -69,3 +69,7 @@ executable circles
 executable counter
   import:              options, deps
   main-is:             Counter.hs
+
+executable toggles
+  import:              options, deps
+  main-is:             Toggles.hs
