--- a/clients/haskell/myxine-client.cabal
+++ b/clients/haskell/myxine-client.cabal
@@ -40,7 +40,7 @@ description:
 
 common deps
   build-depends:       base                 >= 4.12.0.0 && <= 4.14.0.0,
-                       req                  ^>= 3.1,
+                       req                  >= 3.1 && <= 3.3,
                        aeson                ^>= 1.4,
                        text                 ^>= 1.2,
                        mtl                  ^>= 2.2,
@@ -48,8 +48,8 @@ common deps
                        bytestring           ^>= 0.10,
                        unordered-containers ^>= 0.2,
                        containers           ^>= 0.6,
-                       dependent-map        ^>= 0.3,
-                       dependent-sum        ^>= 0.6,
+                       dependent-map        ^>= 0.4,
+                       some                 ^>= 1.0,
                        template-haskell     >= 2.14.0.0 && <= 2.15.0.0,
                        hashable             ^>= 1.3,
                        file-embed           ^>= 0.0.11.1,
@@ -61,7 +61,8 @@ common deps
                        blaze-markup         ^>= 0.8,
                        blaze-html           ^>= 0.9,
                        spoon                ^>= 0.3,
-                       async                ^>= 2.2
+                       async                ^>= 2.2,
+                       lens                 ^>= 4.19
 
 common options
   default-language:    Haskell2010
@@ -79,6 +80,9 @@ common options
                        DeriveGeneric,
                        DerivingStrategies,
                        DerivingVia,
+                       DeriveFunctor,
+                       DeriveFoldable,
+                       DeriveTraversable,
                        DuplicateRecordFields,
                        RecordWildCards,
                        EmptyCase,
