--- a/examples/haskell/myxine-client-examples.cabal
+++ b/examples/haskell/myxine-client-examples.cabal
@@ -51,16 +51,16 @@ common options
                        ViewPatterns
 
 common deps
-  build-depends:       base ^>=4.12.0.0,
-                       random,
-                       text,
-                       blaze-markup,
-                       blaze-html,
-                       lens,
-                       mtl,
-                       uuid,
-                       containers,
-                       myxine-client
+  build-depends:       base >= 4.12.0.0 && <= 4.14.0.0,
+                       random ^>= 1.1,
+                       text ^>= 1.2,
+                       blaze-markup ^>= 0.8,
+                       blaze-html ^>= 0.9,
+                       lens ^>= 4.19,
+                       mtl ^>= 2.2,
+                       uuid ^>= 1.3,
+                       containers ^>= 0.6,
+                       myxine-client == 0.0.1.0
 
 executable circles
   import:              options, deps
