--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["GUI", "web", "interface", "scripting", "tool"]
 categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
 authors = ["Kenny Foner <kwf@very.science>"]
 edition = "2018"
-homepage = "https://github.com/GaloisInc/myxine"
+homepage = "https://github.com/kwf/myxine"
 readme = "README.md"
 license = "MIT"
 
